# RustSim

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  index.html  search_index.json
.tasks/: 2025-01-14_1_fix-compilation-and-improve-readme.md  2025-01-14_2_algorithm-documentation.md
_book/: index.html
_book/algorithms/: 01-architecture.html  02-parser.html  03-circuit-modeling.html  04-mna.html  05-solver.html  06-simulation.html  07-output.html
algorithms/: 01-architecture.html  02-parser.html  03-circuit-modeling.html  04-mna.html  05-solver.html  06-simulation.html  07-output.html
benches/: simulation_benchmarks.rs
doc/: .gitignore  README.md  SUMMARY.md  book.json  deploy.sh  prompt.md
doc/algorithms/: 01-architecture.md  02-parser.md  03-circuit-modeling.md  04-mna.md  05-solver.md  06-simulation.md  07-output.md  README.md
examples/: current_source.sp  dc_sweep.sp  rc_circuit.sp  rlc_circuit.sp  simple_circuit.sp
src/: circuit.rs  cli.rs  lib.rs  main.rs  mna.rs  output.rs  parser.rs  simulator.rs  solver.rs
