[package]
name = "psim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance SPICE circuit simulator written in Rust"
repository = "https://github.com/yourusername/psim"
license = "MIT OR Apache-2.0"
keywords = ["spice", "circuit", "simulation", "electronics", "eda"]
categories = ["science", "simulation"]

[[bin]]
name = "psim"
path = "src/main.rs"

[dependencies]
# Linear algebra and sparse matrices
nalgebra = "0.32"
sprs = "0.11"
ndarray = "0.15"

# Parser related
nom = "7.1"
regex = "1.10"

# CLI interface
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"

# Serialization/Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "simulation_benchmarks"
harness = false 